fix white spacing

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-.page {
-    height: 100vh;
-    position: fixed;
-    width: 100%;
-}
